# minecraft-wasm

./: README.md
frontend/src/: App.jsx
wasm/src/: voxel.cpp
wasm/src/wasm/: CMakeLists.txt
